objects/Program_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Item__c</fullName>
        <label>Applicable Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly Contribution</fullName>
                </value>
                <value>
                    <fullName>One Time Application Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatic_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Channel__c</fullName>
        <label>Promotion Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>OSH Employee</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_type__c</fullName>
        <label>Promotion type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-time discount</fullName>
                </value>
                <value>
                    <fullName>Discount code</fullName>
                </value>
                <value>
                    <fullName>Fixed period discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotions_Program_Metadata__c</fullName>
        <description>Program metadata</description>
        <label>Promotions Program Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recurrency__c</fullName>
        <label>Recurrency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Forever</fullName>
                </value>
                <value>
                    <fullName>1,2,3</fullName>
                </value>
                <value>
                    <fullName>2,3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_discount__c</fullName>
        <label>Type of discount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Flat-dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>